--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple webapp for replicating the basic utility of personal cloud storage services",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "node --watch app.js"
   },
   "keywords": [],
   "author": "",
